--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <main class="main-content">
             <!-- 进度环 -->
             <div class="timer-container">
-                <svg class="progress-ring" width="280" height="280">
-                    <circle class="progress-ring-bg" 
-                            cx="140" cy="140" r="120" 
-                            stroke-width="12" 
+                <svg class="progress-ring" viewBox="0 0 280 280">
+                    <circle class="progress-ring-bg"
+                            cx="140" cy="140" r="120"
+                            stroke-width="12"
                             fill="none">
                     </circle>
-                    <circle class="progress-ring-circle" 
-                            cx="140" cy="140" r="120" 
-                            stroke-width="12" 
+                    <circle class="progress-ring-circle"
+                            cx="140" cy="140" r="120"
+                            stroke-width="12"
                             fill="none"
                             stroke-dasharray="753.98"
                             stroke-dashoffset="0">
