✨ feat(break): add manual break start control
- add start break button to give users control over break timing
- add break-actions container with flexbox layout for button group
- update break workflow to wait for user confirmation before countdown
- improve button hover state with disabled state handling and transform effect
- restore break state correctly when resuming from visibility change
- set minimum button width (140px) for consistent UI appearance

💄 style(break): enhance break reminder button interactions

- add translateY transform on skip button hover for better feedback
- prevent hover effects on disabled buttons using :not(:disabled)

--- a/index.html
+++ b/index.html
@@ -97,8 +97,14 @@
             <h2 class="break-title">休息时间到了！</h2>
             <p class="break-description">请看向 6 米（20英尺）外的物体</p>
             <div class="break-timer" id="breakTimer">20</div>
-            <p class="break-hint">让眼睛放松一下</p>
-            <button class="btn btn-skip" id="skipBtn">跳过休息 →</button>
+            <p class="break-hint" id="breakHint">准备好后点击开始休息</p>
+            <div class="break-actions">
+                <button class="btn btn-primary" id="startBreakBtn">
+                    <span class="btn-icon">▶️</span>
+                    <span class="btn-text">开始休息</span>
+                </button>
+                <button class="btn btn-skip" id="skipBtn">跳过休息 →</button>
+            </div>
         </div>
     </div>
 
